--- a/css/login.css
+++ b/css/login.css
@@ -77,6 +77,64 @@ table { border-collapse:collapse; border-spacing:0; }
     height: 24px;
     background-color: #ddd;
 }
+/* 动态码登录 */
+.m-main-login-move {
+    width: 300px;
+    height: 260px;
+    /* background-color: #666; */
+    margin: 10px auto 0;
+}
+.m-main-login-move input {
+    width: 300px;
+    height: 44px;
+    margin-bottom: 12px;
+    padding-left: 15px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+}
+.m-main-login-move input:nth-of-type(2),
+.m-main-login-move input:nth-of-type(3){
+    width: 200px;
+}
+.m-main-login-move button {
+    width: 300px;
+    height: 44px;
+    border: 0;
+    /* margin-bottom: 20px; */
+    /* margin-left: 40px; */
+    line-height: 44px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #cc5252;
+}
+.m-main-login-move a {
+    text-decoration: none;
+    color: #999;
+    font-size: 14px;
+    display: inline-block;
+    margin-top: 10px;
+}
+.fff{
+    display: inline-block;
+    width: 98px;
+    height: 44px;
+    float: right;
+    line-height: 44px;
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #b1b1b1;
+}
+#r-content-from-img {
+    display: inline-block;
+    width: 98px;
+    height: 44px;
+    float: right;
+}
+
+/* //密码登录 */
 .m-main-login-div {
     width: 380px;
     height: 265px;
@@ -92,6 +150,10 @@ table { border-collapse:collapse; border-spacing:0; }
     margin-left: 40px;
     padding-left: 10px;
     border: 1px solid #ddd;
+}
+.m-main-login-div a {
+    text-decoration: none;
+    color: #999;
 }
 .m-main-login-div button {
     width: 300px;
@@ -112,6 +174,9 @@ table { border-collapse:collapse; border-spacing:0; }
     font-size: 14px;
     cursor: pointer;
 }
+.m-main-login-div {
+    display: none;
+}
 .m-main-login-div span:last-child {
     margin-left: 184px;
 }
@@ -131,12 +196,13 @@ input:-moz-placeholder {
     font-size: 14px;
     color: rgb(207, 201, 201);
 }
+
+/* 底部 */
 .m-main-login-footer {
     width: 202px;
     height: 22px;
-}
-.m-main-login-footer {
     color: #999;
+    text-align: right;
     font-size: 16px;
     line-height: 22px;
     position: absolute;
@@ -144,6 +210,7 @@ input:-moz-placeholder {
     right: 40px;
     cursor: pointer;
 }
+
 .m-main-login-footer-hidden {
     display: inline-block;
     width: 320px;
@@ -193,6 +260,8 @@ input:-moz-placeholder {
     text-align: center;
     color: #999;
 }
+
+/* 二维码登录 */
 .m-main-login-code {
     position: relative;
     display: none;
