--- a/shop.css
+++ b/shop.css
@@ -449,6 +449,7 @@ table { border-collapse:collapse; border-spacing:0; }
     padding: 16px 0 26px;
 }
 .L_shop_date {
+    position: relative;
     height: 23px;
     margin: 11px 0 4px 16px;
 }
@@ -691,6 +692,7 @@ table { border-collapse:collapse; border-spacing:0; }
     right: 0;
 }
 .L_shop_number {
+    position: relative;
     height: 20px;
     line-height: 20px;
 }
@@ -725,4 +727,148 @@ table { border-collapse:collapse; border-spacing:0; }
 } 
 .L_shop_number span {
     vertical-align: top;
+}
+#L_right_pay {
+    display: none;
+    position: absolute;
+    padding: 16px;
+    background: #fff;
+    box-shadow: 0 0 4px 0 rgba(0,0,0,.2);
+    position: absolute;
+    top: -26px;
+    right: 1px;
+    z-index: 10;
+}
+#L_right_pay>p {
+    display: block;
+    font-size: 12px;
+    font-weight: 700;
+    color: #666;
+}
+#L_right_pay .L_pay_title2 {
+    font-weight: normal;
+    margin-top: 6px;
+}
+#L_right_pay li {
+    float: left;
+    text-align: center;
+}
+#L_right_pay i {
+    display: block;
+    background-image: url('images/icon1.png');
+    background-size: 475px;
+    width: 32px;
+    height: 32px;
+    margin: 0 7px;
+}
+#L_right_pay>ul li:first-child i{
+    background-position: -443px -126px;
+}
+#L_right_pay>ul li:nth-child(2) i {
+    background-position: -443px -84px;
+}
+#L_right_pay>ul li:nth-child(3) i {
+    background-position: -443px 0;
+}
+#L_right_pay>ul li:nth-child(4) i {
+    background-position: -376px -296px;
+}
+#L_right_pay>ul li:nth-child(5) i {
+    background-position: -443px -294px;
+}
+#L_right_pay>ul li:nth-child(6) i {
+    background-position: -443px -168px;
+}
+.L_shop_number>p {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 200px;
+    height: 64px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 700;
+    background-color: #000;
+    opacity: .6;
+    z-index: 10;
+    text-align: center;
+    line-height: 64px;
+    border-radius: 8px;
+}
+.L_shop_buy {
+    margin-top: 24px;
+    letter-spacing: -4px;
+}
+
+.L_shop_btn1 {
+    float: left;
+    width: 180px;
+    height: 44px;
+    line-height: 44px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #cc5252;
+    margin-left: 10px;
+    border: none;
+    text-align: center;
+    font-weight: 700;
+    cursor: pointer;
+}
+.L_shop_btn1:hover {
+    opacity: .9;
+}
+.L_shop_btn2 {
+    float: left;
+    width: 120px;
+    height: 44px;
+    color: #666;
+    border: 1px solid #ccc;
+    text-align: center;
+    background-color: #fff;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.L_shop_btn2:hover {
+    border: 1px solid #333;
+}
+.L_buy_code {
+    position: relative;
+    float: left;
+    height: 44px;
+    cursor: pointer;
+}
+.L_buy_code i {
+    display: inline-block;
+    margin: 2px 26px 0 26px;
+    background-image: url('images/icon1.png');
+    background-position: -443px -367px;
+    background-size: 475px;
+    width: 20px;
+    height: 20px;
+}
+.L_buy_code span {
+    display: block;
+    letter-spacing: 0px;
+    font-size: 12px;
+    color: #666;
+    line-height: 14px;
+    margin-top: 5px;
+    text-align: center;
+}
+.L_buy_code img {
+    display: none;
+    background: #fff;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,.2);
+    border-radius: 4px;
+    margin-left: 14px;
+    padding: 10px;
+    position: absolute;
+    left: 70px;
+    top: 0;
+    width: 110px;
+    height: 110px;
 }
