--- a/css/register.css
+++ b/css/register.css
@@ -1,3 +1,7 @@
+*{
+    
+    outline: none;
+}
 body {
     background-color: #fafafa;
 }
@@ -45,17 +49,17 @@ body {
     color: red;
     padding-left: 18px;
     box-sizing: border-box;
-    /* display: none; */
 }
-#r-content-from-input {
+#r-content-from-input,#r-content-from-code {
     display: inline-block;
     width: 230px;
-    display: block;
-    float: left;
+    /* display: block; */
+    /* float: left; */
 }
 .r-content-from div {
     margin-bottom: 10px;
     position: relative;
+
 }
 .r-content-from-phone,.r-content-from-s,.r-content-from-dun {
     display: inline-block;
@@ -91,20 +95,29 @@ body {
     overflow: hidden;
 }
 .r-error {
-    /* display: none; */
+    display: none;
 }
 form {
     position: relative;
 }
-#r-content-from-img {
+#r-content-from-img{
     display: inline-block;
     width: 98px;
     height: 38px;
     float: right;
-    /* position: absolute;
-    top: 75px;
-    right: 0; */
-    /* background-color: #666; */
+    margin: 0;
+}
+.r-content-from-phone1 button{
+    display: inline-block;
+    width: 98px;
+    height: 38px;
+    float: right;
+    margin: 0;
+    color: #333;
+    font-size: 12px;
+    cursor: pointer;
+    background-color: #fff;
+    border: 1px solid #e8e8e8;
 }
 ::-webkit-input-placeholder {
     font-size: 12px;
@@ -121,4 +134,24 @@ form {
 input:-moz-placeholder {
     font-size: 12px;
     color: rgb(207, 201, 201);
+}
+.r-content-from1>button {
+    width: 338px;
+    height: 40px;
+    color: #fff;
+    margin-top: 30px;
+    font-size: 14px;
+    cursor: pointer;
+    border: 1px solid #e8e8e8;
+    background-color: #b32424;
+}
+.r-content-from1>p {
+    padding: 0;
+    color: #999;
+    font-size: 12px;
+    margin-top: 30px;
+}
+.r-content-from1 a {
+    color: #000;
+    text-decoration: none;
 }
