--- a/css/register.css
+++ b/css/register.css
@@ -1,5 +1,4 @@
 *{
-    
     outline: none;
 }
 body {
@@ -107,7 +106,7 @@ form {
     float: right;
     margin: 0;
 }
-.r-content-from-phone1 button{
+/* .r-content-from-phone1 button{
     display: inline-block;
     width: 98px;
     height: 38px;
@@ -118,7 +117,7 @@ form {
     cursor: pointer;
     background-color: #fff;
     border: 1px solid #e8e8e8;
-}
+} */
 ::-webkit-input-placeholder {
     font-size: 12px;
     color: rgb(207, 201, 201);
